--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "version": "1.0.2",
     "require": {
         "interpro/core": "1.0.*",
-        "interpro/extractor": "1.0.*"
+        "interpro/extractor": "1.0.*",
+        "intervention/image": "^2.3"
     },
     "keywords": [
         "imageaggr"
