--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,12 @@
 {
     "name": "interpro/imageaggr",
     "description": "Картинки.",
-    "version": "1.0.10",
+    "version": "1.1.1",
     "require": {
         "interpro/core": "1.0.*",
         "interpro/extractor": "1.0.*",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "interpro/service": "0.1.*"
     },
     "keywords": [
         "imageaggr"
