--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "name": "interpro/imageaggr",
     "description": "Картинки.",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "require": {
-        "interpro/core": "1.1.*",
+        "interpro/core": "^1.1.0",
         "interpro/extractor": "1.0.*",
         "intervention/image": "^2.3",
         "interpro/service": "1.1.*"
